src/test/ui/pattern/usefulness/refutable-pattern-in-fn-arg.stderr
error[E0005]: refutable pattern in function argument: `_` not covered
  --> $DIR/refutable-pattern-in-fn-arg.rs:2:14
   |
LL |     let f = |3: isize| println!("hello");
   |              ^ pattern `_` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
